Support disabled media state for RTP dest updates
